chop and blocks

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,11 @@
         <script src="main_page.js"></script>
         <script src="chat_handler.js"></script>
         <script src="phaser.min.js"></script>
+        <script src="game_vars.js"></script>
+        <script src="game_defs.js"></script>
+
         <script src="game_handler.js"></script>
+        <script src="game_socket.js"></script>
+
     </body>
 </html>
